Setting up support for satellite resources #21 Added resources for main page. Added resource support for localization that isn't supported by the game. Added Chinese back into the language menu. Added working resources into the builds as working examples. I've used Chinese so far because its more difficult to support because it isn't technically supported by the game resources. The build options are commented out until more of the app uses resources.

--- a/Main/SEToolbox/SEToolbox/Properties/MyTexts.zh.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/MyTexts.zh.resx
@@ -117,20 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Boolean_False" xml:space="preserve">
-    <value>无</value>
-    <comment>No</comment>
+  <data name="DisplayName_Item_StoneOre" xml:space="preserve">
+    <value>石頭</value>
   </data>
-  <data name="Boolean_True" xml:space="preserve">
-    <value>是的</value>
-    <comment>Yes</comment>
+  <data name="DisplayName_Item_IronIngot" xml:space="preserve">
+    <value>鑄鐵塊</value>
   </data>
-  <data name="DialogNewVersionTitle" xml:space="preserve">
-    <value>有新版本可用</value>
-    <comment>New version available</comment>
-  </data>
-  <data name="WindowMainTitle" xml:space="preserve">
-    <value>太空工程师 工具箱 - {0} ({1})</value>
-    <comment>SE Toolbox - {0} ({1})</comment>
+  <data name="DisplayName_Item_IronOre" xml:space="preserve">
+    <value>鐵礦</value>
   </data>
 </root>
