--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -123,8 +123,8 @@
   <data name="ClassType_SmallShip" xml:space="preserve">
     <value>Small Ship</value>
   </data>
-  <data name="ClassType_Station" xml:space="preserve">
-    <value>Station</value>
+  <data name="ClassType_LargeStation" xml:space="preserve">
+    <value>Large Station</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -424,14 +424,14 @@ Would you like to download it now?</value>
   <data name="ImportImageClassType_SmallShip" xml:space="preserve">
     <value>Small Ship</value>
   </data>
-  <data name="ImportImageClassType_Station" xml:space="preserve">
-    <value>Station</value>
+  <data name="ImportImageClassType_LargeStation" xml:space="preserve">
+    <value>Large Station</value>
   </data>
   <data name="ImportModelClassType_Asteroid" xml:space="preserve">
     <value>Asteroid</value>
   </data>
-  <data name="ImportModelClassType_Station" xml:space="preserve">
-    <value>Station</value>
+  <data name="ImportModelClassType_LargeStation" xml:space="preserve">
+    <value>Large Station</value>
   </data>
   <data name="document_pulse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document_pulse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -1127,13 +1127,13 @@ Distance:		{1:#,##0.0} m</value>
     <value>To Ship</value>
   </data>
   <data name="CtlCubeMnuConvertToShipTooltip" xml:space="preserve">
-    <value>Change a Station into a Large Ship.</value>
+    <value>Change a Station into a Ship.</value>
   </data>
   <data name="CtlCubeMnuConvertToStation" xml:space="preserve">
     <value>To Station</value>
   </data>
   <data name="CtlCubeMnuConvertToStationTooltip" xml:space="preserve">
-    <value>Change a Large Ship into a Station.</value>
+    <value>Change a Ship into a Station.</value>
   </data>
   <data name="CtlCubeMnuCopyDetail" xml:space="preserve">
     <value>Copy text detail to Clipboard</value>
@@ -1510,5 +1510,26 @@ Surface Gravity:	{14:#,##0.0} g
 Spawns Flora:	{15}
 Show GPS:	{16}
 Planet Generator:	{17}</value>
+  </data>
+  <data name="ClassType_SmallStation" xml:space="preserve">
+    <value>Small Station</value>
+  </data>
+  <data name="ImportImageClassType_SmallStation" xml:space="preserve">
+    <value>Small Station</value>
+  </data>
+  <data name="ImportModelClassType_SmallStation" xml:space="preserve">
+    <value>Small Station</value>
+  </data>
+  <data name="WnExplorerMnuSelectionConvertToShip" xml:space="preserve">
+    <value>To Ship</value>
+  </data>
+  <data name="WnExplorerMnuSelectionConvertToShipTooltip" xml:space="preserve">
+    <value>Convert selected Stations to Ships</value>
+  </data>
+  <data name="WnExplorerMnuSelectionConvertToStation" xml:space="preserve">
+    <value>To Station</value>
+  </data>
+  <data name="WnExplorerMnuSelectionConvertToStationTooltip" xml:space="preserve">
+    <value>Convert selected Ships to Stations</value>
   </data>
 </root>
