--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -670,7 +670,7 @@ Please update it before running SEToolbox {2} again.</value>
     <value>Sandbox Prefab files</value>
   </data>
   <data name="DialogExportPrefabObjectTitle" xml:space="preserve">
-    <value>Specify filename to export to</value>
+    <value>Specify filename to export Prefab to (name is embded into files)</value>
   </data>
   <data name="VoxelMergeType_UnionMaterialLeftToRight" xml:space="preserve">
     <value>Union Material Left to Right</value>
@@ -2780,5 +2780,8 @@ Planet Generator:	{17}</value>
   </data>
   <data name="WnExplorerMnuExportSpawnGroupTooltip" xml:space="preserve">
     <value>Export selected ships, stations and asteroids to a single an prefab .sbc file, spawngroup file and asteroids.</value>
+  </data>
+  <data name="DialogExportSpawnGroupObjectTitle" xml:space="preserve">
+    <value>Specify filename to export SpawnGroup to (name is embded into files)</value>
   </data>
 </root>
