--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -328,7 +328,7 @@ Units:		{4:#,##0.####}</value>
     <value>..\Resources\shield.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ToolboxSplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SEToolbox_splash copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\SEToolbox_splash_en.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="fit_to_size" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fit_to_size.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
