--- a/Main/SEToolbox/SEToolbox/Properties/Resources.zh-cn.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.zh-cn.resx
@@ -2373,6 +2373,6 @@
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ToolboxSplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SEToolbox_splash_zh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\SEToolbox_splash_zh-cn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
